BacktesterOrderService implementation